# Workmate_test_case

./: .gitignore  README.md  main.py  pyproject.toml  reports.py  requirements.txt
reports/: average_performance_report.py  average_rating_report.py  generate_reports.py  models.py
tests/: conftest.py  test_avg_perform_report.py  test_reports.py
