[tool.poetry]
name = "reports"
version = "0.1.0"
description = ""
authors = ["SavinNik <nikolus5000@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^9.0.1"

[tool.poetry.group.dev.dependencies]
tabulate = "^0.9.0"
black = "^25.11.0"
isort = "^7.0.0"
flake8 = "^7.3.0"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.pytest]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"